FIX. Fix font and spacing between items.

--- a/css/style.css
+++ b/css/style.css
@@ -807,7 +807,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .footer-top {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   width: 1160px;
   padding-top: 65px;
   margin-left: auto;
@@ -1310,6 +1310,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .good-item {
   position: relative;
+  margin-bottom: 45px;
 }
 
 .good-item::after {
@@ -1350,6 +1351,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   display: block;
   width: 360px;
   height: 380px;
+  margin-bottom: 35px;
 }
 
 .item-info {
@@ -1360,6 +1362,12 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 
 .good-name {
   width: 260px;
+  margin: 0;
+  font-family: "Gilroy", Tahoma, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.333em;
+  letter-spacing: 0.01em;
 }
 
 .good-hover-actions {
@@ -1378,6 +1386,7 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
 }
 
 .price {
+  margin: 0;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -1409,7 +1418,6 @@ input[type="radio"]#tab_credit:checked ~ dl .label-credit {
   justify-content: space-between;
   align-items: center;
   width: 760px;
-  margin-top: 38px;
   margin-bottom: 77px;
   font-family: "Gilroy", Tahoma, sans-serif;
   font-weight: 700;
